# aduib-diffsynth

./: .env.example  .gitignore  .ruff.toml  README.md  app_factory.py  gradio_app.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: code-review.yml
component/storage/: base_storage.py  opendal_storage.py  s3_storage.py  storage_type.py
configs/: __init__.py  app_config.py
configs/models/: __init__.py  models.yaml
configs/storage/: __init__.py  s3_storage_config.py
controllers/: route.py  text_to_image.py
diffsynth/: diffsynth.py  mineru.py
diffsynth/mineru/: mineru.py
diffsynths/: __init__.py  aduib_ai.py  asr.py  blog.py  mineru.py  ocr.py  text_to_image.py  tts.py
docs/: IMAGE_EDITING_API.md  IMAGE_EDITING_API_IMPLEMENTATION.md  IMAGE_EDITING_FEATURE.md  IMPLEMENTATION_SUMMARY.md  MODEL_MANAGEMENT_FEATURE.md  README.md  TEXT_TO_IMAGE.md
mcp_service/: prompt.py  tools.py
rpc/client/: completion_service.py
test/: test_image_editing_api.py  test_markdown_example.py  test_text_to_image.py
utils/: http.py  markdown.py
