[project]
name = "aduib-diffsynth"
version = "1.0.0"
description = "Aduib DiffSynth Service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "chaorenex1", email = "24537608z@gmail.com"},
    ]
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "nacos-sdk-python>=2.0.1",
    "aduib_rpc>=1.0.4",
    "nacos-mcp-wrapper-python",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "sqlalchemy==2.0.39",
    "uvicorn>=0.34.2",
    "redis>=6.4.0",
    "pyyaml",
    "pytz"
]
[tool.setuptools]
packages = []

[tool.uv]
[dependency-groups]
diffsynth=["diffsynth-engine"]
pdf-parser=["mineru[core]"]
ocr=["paddleocr"]
dev= [
    "alembic==1.16.4",
    "pytest==8.4.1",
    "ruff==0.8.5"
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
