[project]
name = "aduib-diffsynth"
version = "1.0.0"
description = "Aduib DiffSynth Service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "chaorenex1", email = "24537608z@gmail.com"},
    ]
dependencies = [
    "bcrypt>=4.3.0",
    "opendal>=0.45.16",
    "boto3>=1.37.11",
    "fastapi>=0.116.1",
    "nacos-sdk-python>=2.0.1",
    "aduib_rpc>=1.0.10",
    "nacos-mcp-wrapper-python",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3,<=2.12.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy==2.0.39",
    "uvicorn>=0.34.2",
    "gradio>=5.0.0",
    "redis>=6.4.0",
    "pyyaml",
    "pytz",
]
[project.optional-dependencies]
diffsynth=["diffsynth"]
pdf_parser=["mineru[core]"]
ocr=["paddleocr"]
cuda=["torch==2.7.1","torchvision==0.22.1"]
tts=["cosyvoice-client"]

[dependency-groups]
dev= [
    "alembic==1.16.4",
    "pytest==8.4.1",
    "ruff"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128",marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cu128" ,marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name="pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

